# mlops-specialization-project

./: README.md  pyproject.toml  sonar-project.properties
.github/workflows/: sonar_scan.yml
src/config/: data_sources.json  data_transformations.json
src/datacycles/: data_validator.py  feature_selector.py  feature_store.py  feature_transformer.py
src/logging/: base_logger.py
src/metadata/: metadata_store.py
src/mlmodels/: base_model.py
src/mlmodels/classification/: classification_model.py
