[tool.poetry]
name = "mlops-specialization-project"
version = "0.1.0"
description = "MLOps Specialization project"
authors = ["Miguel Arquez Abdala"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
tensorflow = "^2.7.0"
scikit-learn = "^1.0.2"
numpy = ">=1.19.0,<1.20.0"
pandas = "^1.3.5"
ml-metadata = "^1.5.0"
feast = "^0.16.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
